2018-08-19  Boruch Baum  <boruch_baum@gmx.com>

	* examples/hcal/local_functions.c (all): Convert tabs to
	two-space, remove doxygen? style three-slash comment forms, add
	comments, change whitespace
	(set_default_location): Correct timezone information for Honolulu,
	Sydney, Sao Paolo
	(get_epoch_time_range): Fix segfault, due to improper handling of
	null time zone string value.

	* examples/hcal/hcal.c, examples/hcal/hdate.c: Convert tabs to
	two-space, remove doxygen? style three-slash comment forms, add
	comments, change whitespace
	(print_week, print_dow_line): bugfix bidi print correct sequence
	(print_week): Fix segfault, due to improper handling of
	null time zone string value.
	(print_week): bugfix print shabbat name when using bidi

2018-08-17  Boruch Baum  <boruch_baum@gmx.com>

	* ALL: First commit since 2015, and using git!
	* ALL: Update copyrights and email-addresses
	* autogen.sh: New shel script file for building from sources
	* INSTALL: Replace generic ancient FSF file with useful, relevant one
	* USE: Edit for context
	* Makefile: Correct use of variables (CFLAGS->AM_CFLAGS, INCLUDE->AM_CPPFLAGS)
	* ALL: Remove unnecessary extra subdirectory level
	* Doxyfile, Doxyfile_cpp: Remove doxygen files
	* COPYING': Rename to 'LICENSE'
	* Changelog: Adopt a standard format

custom_days.c
- BUGFIX account for adjustments causing custom days to cross year boundaries

hdate.c
- BUGFIX custom_days respects -qqq option
- BUGFIX holidays display in hebrew and bidi
- BUGFIX custom days display in hebrew and bidi
- BUGFIX tabular holidays display in hebrew and bidi
- BUGFIX tabular custom days display in hebrew and bidi
- BUGFIX parasha display in hebrew and bidi
- BUGFIX parasha display data-first or label-first
- BUGFIX apostrophe for Shabbat prefix "yom sh"
- BUGFIX omer labels and english for -ooo
- BUGFIX omer -o display in hebrew and bidi
- BUGFIX all data labels convert spaces to underscores
- BUGFIX daf yomi masechtaot convert spaces to underscores